--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,14 @@
 @import "tailwindcss";
 
 * {
-    color: white;
+
+    box-sizing: border-box;
 }
 
 body {
+    color: white;
     background-color: #111111;
+    max-width: 1100px;
+    margin: auto;
+    padding: 0;
 }
